# my-first-crewai

./: .env.example  README.md  myfile.log.txt  pyproject.toml  report.md
output/: report.txt  summary.txt
src/my_first_crewai/: audio.py  const.py  crew.py  image_processor.py  main.py  main_1.py  my_flow.py  my_flow2.py  test_download.py  test_voice.py  xf_tts.py
src/my_first_crewai/config/: agents.yaml  tasks.yaml
src/my_first_crewai/output/: report.txt  summary.txt
src/my_first_crewai/tools/: call_test_1.py  call_test_2.py  gaode_sse_mcp.py  markdown_pdf.py  mcp_tool.py  test_yutube_tool.py  travel_tools.py
