[project]
name = "my_first_crewai"
version = "0.1.0"
description = "my_first_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools[mcp]>=0.44.0",
    "crewai[tools]>=0.119.0,<1.0.0",
    "gradio>=5.29.0",
    "mcp>=1.8.0",
]

[project.scripts]
my_first_crewai = "my_first_crewai.main:run"
run_crew = "my_first_crewai.main:run"
train = "my_first_crewai.main:train"
replay = "my_first_crewai.main:replay"
test = "my_first_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
